Finish Left and right position styling And fix text alignment css conflict

--- a/Chatbot/src/components/Chatbot/styles/Chatbot.css
+++ b/Chatbot/src/components/Chatbot/styles/Chatbot.css
@@ -1,7 +1,6 @@
 .Chatbot {
     position: fixed;
     bottom: 30px;
-    right: 30px;
     z-index: 1000;
     max-height: 600px;
     height: calc(100vh - 100px);
@@ -9,6 +8,14 @@
     box-shadow: 5px 5px 30px 0 rgba(0, 0, 0, 0.1);
     background-color: #fafafa;
     border-radius: 5px;
+}
+
+.Left {
+    left: 30px;
+}
+
+.Right {
+    right: 30px;
 }
 
 .Chatbot_DirectLink_Container {
@@ -107,10 +114,16 @@
 }
 
 /*Animation */
-.ZoomIn {
+.ZoomIn_Right {
     animation-duration: 0.5s;
     animation-name: ZoomIn;
     transform-origin: bottom right;
+}
+
+.ZoomIn_Left {
+    animation-duration: 0.5s;
+    animation-name: ZoomIn;
+    transform-origin: bottom left;
 }
 
 @keyframes ZoomIn {
@@ -134,10 +147,16 @@
     }
 }
 
-.ZoomOut {
+.ZoomOut_Right {
     animation-duration: 0.5s;
     animation-name: ZoomOut;
     transform-origin: bottom right;
+}
+
+.ZoomOut_Left {
+    animation-duration: 0.5s;
+    animation-name: ZoomOut;
+    transform-origin: bottom left;
 }
 
 @keyframes ZoomOut {
